# paperlab

./: .env.example  .gitignore  README.md  pyproject.toml
src/paperlab/: analyze.py  cli.py  config.py  db.py  groups.py  llm.py  models.py  nas.py  pdf.py  query_builder.py  review.py  synthesize.py
src/paperlab/export/: obsidian.py
src/paperlab/ingest/: __init__.py  arxiv.py  base.py  openalex.py  semanticscholar.py  unpaywall.py
src/paperlab/web/: app.py
src/paperlab/web/static/: style.css
src/paperlab/web/templates/: _ai_preview.html  _answer.html  _job.html  _summary.html  base.html  chat.html  group.html  groups.html  library.html  paper.html  searches.html  syntheses.html  synthesis.html
tests/: test_export_obsidian.py  test_nas.py  test_pdf_fetch.py  test_review.py  test_synthesize.py
